# bottle

./: .editorconfig  .gitignore  .gitlab-ci.yml  .mailmap  HACKING  NEWS  README  RELEASE  TRANSLATORS  meson.build  meson_options.txt  testing  valgrind.supp
.tx/: config
build-aux/: update-copyright
doc/: BUILDINFO.5.asciidoc  PKGBUILD.5.asciidoc  alpm-hooks.5.asciidoc  asciidoc.conf  bottle-conf.8.asciidoc  bottle-key.8.asciidoc  bottle.8.asciidoc  bottle.conf.5.asciidoc  footer.asciidoc  index.asciidoc  makepkg.8.asciidoc  makepkg.conf.5.asciidoc  meson.build  repo-add.8.asciidoc  submitting-patches.asciidoc  translation-help.asciidoc  vercmp.8.asciidoc
etc/: .gitignore  bottle.conf.in  makepkg.conf.in
lib/libalpm/: add.c  add.h  alpm.c  alpm.h  alpm_list.c  alpm_list.h  backup.c  (+45 more)
proto/: PKGBUILD-vcs.proto
scripts/: .gitignore  bottle-db-upgrade.sh.in  bottle-key.sh.in  libmakepkg.pc.in  makepkg-template.pl.in  makepkg.sh.in  meson.build  repo-add.sh.in  wrapper.sh.in
src/bottle/: .gitignore  bottle-conf.c  bottle.c  bottle.h  callback.c  callback.h  check.c  check.h  conf.c  conf.h  database.c  deptest.c  files.c  meson.build  package.c  package.h  query.c  remove.c  sighandler.c  sighandler.h  sync.c  upgrade.c  util.c  util.h
src/bottle/po/: Makevars  POTFILES.in  ar.po  ast.po  az_AZ.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_419.po  eu.po  eu_ES.po  fi.po  fr.po  gl.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  meson.build  nb.po  nl.po  pacman.pot  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  (+7 more)
(+536 files in other folders)
