bottle_sources = files('''
  check.h check.c
  conf.h conf.c
  database.c
  deptest.c
  files.c
  package.h package.c
  bottle.h bottle.c
  query.c
  remove.c
  sighandler.h sighandler.c
  sync.c
  callback.h callback.c
  upgrade.c
  util.h util.c
'''.split())

bottle_conf_sources = files('''
  bottle-conf.c
  util.h util.c
  callback.h callback.c
  conf.h conf.c
'''.split())
